2011-01-24  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tcllib 1.13 ========================
	* 

2010-08-17  Andreas Kupries  <andreask@activestate.com>

	* coroutine.man: Added package documentation. 
	* coro_auto.man:

2009-12-07  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tcllib 1.12 ========================
	* 

2009-11-10  Andreas Kupries  <andreask@activestate.com>

	* New module 'coroutine' providing to coroutine utility packages
	  for easier use of channel operations. These packages are for Tcl
	  8.6+.
