@@ -13,40 +13,40 @@ pcx::tcldep   1 needs tcl 8.6
 
 namespace eval ::coroutine {}
 
-pcx::check 1 std ::coroutine::create \
+pcx::check 1 std ::coroutine::util::create \
     {checkSimpleArgs 0 -1 {
 	checkWord
     }}
-pcx::check 1 std ::coroutine::global \
+pcx::check 1 std ::coroutine::util::global \
     {checkSimpleArgs 0 -1 {
 	checkVarDecl
     }}
-pcx::check 1 std ::coroutine::after \
+pcx::check 1 std ::coroutine::util::after \
     {checkSimpleArgs 1 1 {
 	checkInt
     }}
-pcx::check 1 std ::coroutine::exit \
+pcx::check 1 std ::coroutine::util::exit \
     {checkSimpleArgs 0 1 {
 	checkInt
     }}
-pcx::check 1 std ::coroutine::vwait \
+pcx::check 1 std ::coroutine::util::vwait \
     {checkSimpleArgs 1 1 {
 	checkVarName
     }}
-pcx::check 1 std ::coroutine::await \
+pcx::check 1 std ::coroutine::util::await \
     {checkSimpleArgs 0 -1 {
 	checkVarName
     }}
-pcx::check 1 std ::coroutine::update \
+pcx::check 1 std ::coroutine::util::update \
     {checkSimpleArgs 0 1 {
 	{checkKeyword 0 {idletasks}}
     }}
-pcx::check 1 std ::coroutine::gets \
+pcx::check 1 std ::coroutine::util::gets \
     {checkSimpleArgs 1 2 {
 	checkChannelID
 	checkVarNameWrite
     }}
-pcx::check 1 std ::coroutine::read \
+pcx::check 1 std ::coroutine::util::read \
     {coreTcl::checkReadCmd 0}
 
 # Initialization via pcx::init.
